src/objects/Organization__c.object
<CustomObject>
    <description>QC - Future</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Org</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Child Organizations</relationshipLabel>
        <relationshipName>Child_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Status__c</fullName>
        <formula>TEXT(Parent_Org__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>